package app.ui.console;

public class CreateNewParameterUI {
}
